[tool.poetry]
name = "support"
version = "0.1.0"
description = ""
authors = ["Pedro Santiago <joaopedrosantiago1103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyperclip = "^1.8.2"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
